<resources>
    <string name="app_name">Aplicacion-checkbox</string>
    <string name="input_1">Ingresar Numero Uno</string>
    <string name="input_2">Ingresar Numero Dos</string>
    <string name="label_suma">Suma</string>
    <string name="label_resta">Resta</string>
    <string name="label_dividir">División</string>
    <string name="label_multiplicar">Multiplicación</string>
    <string name="label_btn_resolver">Resolver</string>
    <string name="label_btn_limpiar">Limpiar</string>
    <string name="text_marca">"Powered by: Kevin Gonzalo Cruz Martinez"</string>
    <string name="span_1">"#Rey del commit Senior del push"</string>
    <string name="span_2">"#Senir Dev amo del teclado"</string>
</resources>